added scale-select functionality

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
             <h2>Highlighter</h2>
             <div id="highlightControls">
-                <label for="noteHighlight"></label>
-                    <input type="radio" name="highlight" id="noteHighlight" checked>Note Highlight
+                <label for="noteHighlight">
+                    <input type="radio" name="highlight" id="noteHighlight"
+                            value="noteHighlight" checked>Note Highlight
                 </label>
 
                 <label for="scaleHighlight">
-                    <input type="radio" name="highlight" id="scaleHighlight"/>Scale Highlight
+                    <input type="radio" name="highlight" id="scaleHighlight"
+                            value="scaleHighlight"/>Scale Highlight
                 </label>
             </div>
 
