Added hungarian scale - tried to implement user-toggled number of strings but need to rethink

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div id="notesContainer">
         <div id="controlsContainer">
 
-            <h2>Highlighter</h2>
+            <h2>Toggle Highlight</h2>
             <div id="highlightControls">
                 <label for="noteHighlight">
                     <input type="radio" name="highlight" id="noteHighlight"
-                            value="noteHighlight" checked>Note Highlight
+                            value="noteHighlight" checked>Single Note Highlight
                 </label>
 
                 <label for="scaleHighlight">
@@ -27,16 +27,47 @@
                 </label>
             </div>
 
-            <h2>Scale Select</h2>
+            <!-- <h2>Select Number of Strings</h2>
+            <div id="numberOfStrings">
+                <label for="fourString">
+                    <input type="radio" name="strings" id="fourString"
+                            value="4"/>4
+                </label>
+
+                <label for="fiveString">
+                    <input type="radio" name="strings" id="fiveString"
+                            value="5" checked/>5
+                </label>
+
+                <label for="sixString">
+                    <input type="radio" name="strings" id="sixString"
+                            value="6" />6
+                </label>
+
+                <label for="sevenString">
+                    <input type="radio" name="strings" id="sevenString"
+                            value="7"/>7
+                </label>
+            </div> -->
+
+
+            <h2>Select Scale</h2>
             <div id="scaleControls">
                 <label for="minorScale">
                     <input type="radio" name="scale" id="minorScale" checked>Minor Scale
                 </label>
 
+                <label for="hungarianMinorScale">
+                    <input type="radio" name="scale" id="hungarianMinorScale">Hungarian Minor Scale
+                </label>
+
                 <label for="majorScale">
                     <input type="radio" name="scale" id="majorScale">Major Scale
                 </label>
+
             </div>
+
+
 
 
             <!-- WILL NOT BE NEEDED FOR NOW -->
